got the extension to fully work in placing all audio tabs beside the current one (Even from different windows and also update the manifest to min chrome v 45 since the audible tab query is only added in v45

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "name": "Audio stopper",
   "description": "This extension lets you quickly navigate to the tab that has media playing",
   "version": "0.1",
-
+  "minimum_chrome_version": "45",
 
   "icons": {
     "38": "images/computer_38.png",
